# doc_crawler

./: .gitignore  AGENTS.md  README.md  README_CN.md  README_LLM.md  main.py  pyproject.toml  scrapy.cfg
akshare_docs/: pipelines.py  scrapy.cfg  settings.py
akshare_docs/akshare_docs/: items.py
akshare_docs/akshare_docs/spiders/: doc_spider.py
akshare_docs/spiders/: doc_spider.py
doc_crawler/: cli.py  items.py  middlewares.py  pipelines.py  settings.py
doc_crawler/spiders/: doc_spider.py
docs/superpowers/plans/: 2026-04-08-single-page-crawler-implementation.md
docs/superpowers/specs/: 2026-04-08-single-page-crawler-design.md
