[project]
name = "scrapy-mth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fake-useragent>=2.2.0",
    "html2text>=2025.4.15",
    "langchain-deepseek>=1.0.1",
    "langgraph-checkpoint>=4.0.1",
    "markitdown[docx,pdf,pptx]>=0.1.5",
    "scrapy>=2.14.1",
]
