[project]
name = "html_docs_crawler"
version = "0.1.1"
description = "Universal documentation crawler that converts HTML pages to Markdown with internal link correction"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["scrapy", "crawler", "markdown", "documentation", "web-scraping"]
dependencies = [
    "fake-useragent>=2.2.0",
    "html2text>=2025.4.15",
    "markitdown[docx,pdf,pptx]>=0.1.5",
    "scrapy>=2.14.1",
]

[project.urls]
Homepage = "https://github.com/zwidny/doc_crawler"
Source = "https://github.com/zwidny/doc_crawler"
BugTracker = "https://github.com/zwidny/doc_crawler/issues"

[tool.setuptools.package-data]
doc_crawler = ["../scrapy.cfg", "../llms.txt"]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
doc_crawler = "doc_crawler.cli:main"


